<resources>
    <string name="app_name">Project PoEtato</string>
    <string name="league" translatable="false">League</string>
    <string name="ladder" translatable="false">Ladder</string>
    <string name="leagueTitle">League and Event Tracker</string>
    <string name="theme">Theme</string>
    <string name="navi_drawer_open">Open Navigation Drawer</string>
    <string name="navi_drawer_close">Close Navigation Drawer</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>


    <!-- Strings used for LeagueInfoFragment -->
    <string name="li_title">League Information</string>
    <string name="li_league_name">League Name:</string>
    <string name="li_description">Description:</string>
    <string name="li_register_at">Register At:</string>
    <string name="li_event">Event:</string>
    <string name="li_league_url">Forum Post:</string>
    <string name="li_starts">Starts:</string>
    <string name="li_ends">Ends:</string>
    <string name="li_league_event" translatable="false">League Event:</string>
    <string name="li_rule_nr">Rule#</string>
    <string name="li_rule_name">Name</string>
    <string name="li_rule_description">Description</string>

    <!-- Strings used for Ladder Activity/Fragments -->
    <string name="title_activity_ladder">Ladder Tracker</string>
    <string name="spinner_select_league">Select a League &#8230;</string>

    <!-- String used for Ladder Activity's Character Info Dialog -->
    <string name="cid_status">Status:</string>
    <string name="cid_rank">Rank:</string>
    <string name="cid_charName">Character:</string>
    <string name="cid_account">Account:</string>
    <string name="cid_level" translatable="false">Level:</string>
    <string name="cid_class">Class:</string>
    <string name="cid_delveParty">Delve Party:</string>
    <string name="cid_delveSolo" translatable="false">Delve Solo:</string>
    <string name="cid_experience" translatable="false">Experience:</string>
    <string name="cid_challenges" translatable="false">Challenges:</string>
    <string name="cid_twitch" translatable="false">Twitch:</string>
    <string name="cid_track">Tracking:</string>
    <string name="cid_title">Character Info</string>

    <!-- LadderService Notificaiton -->
    <string name="lsn_league" translatable="false">"League: "</string>
    <string name="lsn_rank" translatable="false">"Rank: "</string>
    <string name="lsn_name">"Name: "</string>
    <string name="lsn_lastupdated">"Last updated: "</string>
    <string name="lsn_at">at</string>

    <!-- ConnectivityManager -->
    <string name="cm_noConnection">No internet connection, unable to execute action.</string>


</resources>
