<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundDarkBlue"
    android:clickable="true"
    android:focusable="true"
    android:theme="@style/AppTheme.DarkBlue"
    tools:context=".Fragments.LeagueInfo.LeagueInfoFragment">


    <!-- Literally useless Toolbar -->
    <android.support.constraint.Guideline
        android:id="@+id/guideline_splitrule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_splitrule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_fragment_leagueinfo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColorDarkBlue"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_close_white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/AppTheme.ToolbarSize">

        <TextView
            android:id="@+id/toolbar_fragment_title_leagueinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbarNormalSize"
            tools:layout_editor_absoluteX="228dp"
            tools:layout_editor_absoluteY="20dp"
            tools:text="whatever fuck this" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/labelLeagueInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/li_league_name"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_leagueinfo" />

    <TextView
        android:id="@+id/textLeagueInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoName"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_leagueinfo"
        tools:text="tmp_leaguename" />

    <TextView
        android:id="@+id/labelLeagueInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_description"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoDescription" />

    <TextView
        android:id="@+id/textLeagueInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoDescription"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoName"
        tools:text="tmp_description" />

    <TextView
        android:id="@+id/labelLeagueInfoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_register_at"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoRegister" />

    <TextView
        android:id="@+id/textLeagueInfoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoRegister"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoDescription"
        tools:text="tmp_register" />

    <TextView
        android:id="@+id/labelLeagueInfoEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_event"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoEvent" />

    <TextView
        android:id="@+id/textLeagueInfoEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoEvent"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoRegister"
        tools:text="tmp_event" />

    <TextView
        android:id="@+id/labelLeagueInfoUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_league_url"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoUrl" />

    <TextView
        android:id="@+id/textLeagueInfoUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoUrl"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoEvent"
        tools:text="tmp_forum_post" />

    <TextView
        android:id="@+id/labelLeagueInfoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_starts"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoStart" />

    <TextView
        android:id="@+id/textLeagueInfoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoStart"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoUrl"
        tools:text="tmp_starts" />

    <TextView
        android:id="@+id/labelLeagueInfoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_ends"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoEnd" />

    <TextView
        android:id="@+id/textLeagueInfoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoEnd"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoStart"
        tools:text="tmp_ends" />

    <TextView
        android:id="@+id/labelLeagueInfoLeagueEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/li_league_event"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeagueInfoLeagueEvent" />

    <TextView
        android:id="@+id/textLeagueInfoLeagueEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/txtSmallSize"
        app:layout_constraintStart_toEndOf="@+id/labelLeagueInfoLeagueEvent"
        app:layout_constraintTop_toBottomOf="@+id/textLeagueInfoEnd"
        tools:text="tmp_leagueevent" />

    <ListView
        android:id="@+id/listLeagueRules"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRuleNrCol" />

    <TextView
        android:id="@+id/textRuleNrCol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/li_rule_nr"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_splitrule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLeagueInfoLeagueEvent" />

    <TextView
        android:id="@+id/textRuleNameCol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/li_rule_name"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_splitrule2"
        app:layout_constraintStart_toStartOf="@+id/guideline_splitrule"
        app:layout_constraintTop_toTopOf="@+id/textRuleNrCol" />

    <TextView
        android:id="@+id/textRuleDescriptionCol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/li_rule_description"
        android:textSize="@dimen/txtSmallSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_splitrule2"
        app:layout_constraintTop_toTopOf="@+id/textRuleNameCol" />

</android.support.constraint.ConstraintLayout>